pkgincludedir = ${includedir}/AGILe

pkginclude_HEADERS = \
  AGILe.hh \
  AGILeConfig.hh \
  AGILeSTL.hh \
  AGILeBoost.hh \
  Utils.hh \
  Generator.hh \
  Particle.hh \
  GeneratorState.hh \
  Loader.hh \
  Run.hh

dist_noinst_HEADERS = \
  HepMCTools.hh \
  Tools/osdir.hh

nobase_pkginclude_HEADERS = \
  Tools/Logging.hh Tools/Logging.fhh \
  Tools/AGILePaths.hh

nobase_pkginclude_HEADERS += \
  FHerwig/FHerwig.hh \
  FHerwig/FHerwigJimmy.hh \
  FHerwig/JimmyWrapper.hh \
  FHerwig/FHerwigWrapper.hh \
  FHerwig/FHerwigWrapper65.hh

nobase_pkginclude_HEADERS += \
  FPythia/FPythia.hh \
  FPythia/FPythiaWrapper.hh \
  FPythia/FPythiaWrapper62.hh

nobase_pkginclude_HEADERS += \
  AlpGen/AlpGen.hh \
  AlpGen/AlpGenFHerwig.hh \
  AlpGen/AlpGenFHerwigJimmy.hh \
  AlpGen/AlpGenFPythia.hh \
  AlpGen/AlpGenWrapper.hh

nobase_pkginclude_HEADERS += \
  Charybdis/CharybdisFHerwig.hh \
  Charybdis/CharybdisFHerwigJimmy.hh \
  Charybdis/CharybdisFPythia.hh \
  Charybdis/CharybdisWrapper.hh \
  Charybdis/Charybdis.hh

nobase_pkginclude_HEADERS += \
  Rapgap/RapgapWrapper.hh \
  Rapgap/RapgapWrapper32.hh \
  Rapgap/Rapgap.hh

nobase_pkginclude_HEADERS += \
  Cascade/CascadeWrapper.hh \
  Cascade/CascadeWrapper2.hh \
  Cascade/Cascade.hh

nobase_pkginclude_HEADERS += \
  Phojet/Phojet.hh \
  Phojet/PhojetWrapper.hh \
  Phojet/PhojetWrapper62.hh

nobase_pkginclude_HEADERS += \
  Ariadne/Ariadne.hh \
  Ariadne/AriadneWrapper.hh \
  Ariadne/AriadneWrapper62.hh
